--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "18.0.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.16.7",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4"
   }
